fix overflowing link

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -28,6 +28,8 @@ header {
   margin: 0 auto;
   background: #ffffff;
   font-size: 1.4em;
+  word-wrap: break-word;
+  overflow-x: hidden;
 }
 
 #content {
